<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.location.LocationFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_gradient_transparent"
            android:contentDescription="@string/back_button"
            android:paddingStart="4dp"
            android:paddingEnd="8dp"
            android:scaleType="center"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_ring"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/button_gradient"
            android:contentDescription="@string/ring_button"
            android:scaleType="center"
            android:src="@drawable/bell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_gradient"
            android:iconifiedByDefault="false"
            android:queryBackground="@null"
            android:queryHint="@string/where_is_your_location"
            android:searchIcon="@drawable/search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_gradient"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_view" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/tv_your_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/your_location"
                    android:textColor="#dbdbdb"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_your_location"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_gradient_circle"
                    android:contentDescription="@string/pin"
                    android:scaleType="center"
                    android:src="@drawable/pin_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_your_location" />

                <TextView
                    android:id="@+id/tv_your_location_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/placeholder_search_detail"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_your_location"
                    app:layout_constraintTop_toTopOf="@id/iv_your_location" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/iv_your_location"
                    app:layout_constraintTop_toTopOf="@id/iv_your_location" />

                <Button
                    android:id="@+id/btn_set_location"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/loc_button_gradient"
                    android:text="@string/set_location"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_your_location" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <ImageButton
            android:id="@+id/ib_my_location"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_gradient_circle"
            android:contentDescription="@string/your_location"
            android:src="@drawable/my_location"
            app:layout_constraintBottom_toTopOf="@id/cv_bottom"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
